<resources>
    <string name="app_name">App</string>
    <string name="title_home">信息浏览</string>
    <string name="title_dashboard">发布信息</string>
    <string name="title_notifications">本站新闻</string>
    <string name="title_user">用户信息</string>
    <string name="missperson_detail">详细信息</string>
    <string name="search_hint">请输入关键字</string>
    <string name="user_name">姓名</string>
    <string name="user_age">年龄</string>
    <string name="user_bodyHeight">身高</string>
    <string name="upload_image">上传图片</string>
    <string name="user_feature">特征</string>
    <string name="user_address">家庭住址</string>
    <string name="user_IsDNA">是否采集DNA</string>
    <string name="user_dress">衣着特征</string>
    <string name="user_contact">联系方式</string>
    <string name="user_email">常用邮箱</string>
    <string name="user_gender">性别</string>
    <string name="login_regist">登陆/注册</string>
    <string name="welcome_word">请输入您的信息</string>
    <string name="wirte_user_name">请输入用户名</string>
    <string name="wirte_user_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="release_info">发布的信息</string>
    <string name="scan_record">浏览记录</string>
    <string name="user_detail_address">详细住址</string>
    <string name="login_out">退出登录</string>
    <string name="title_volunteer">志愿者招聘</string>
    <string name="IsDna_yes">是</string>
    <string name="IsDna_no">否</string>
    <string name="welcome_register">还未注册？点击注册</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="user_register">用户注册</string>
    <string name="user_password">密码</string>
    <string name="user_surePsw">确认密码</string>
</resources>
