<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--功能栏信息-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="50px"
            android:gravity="center"
            android:text="@string/welcome_word"
            android:textSize="20dp" />

    </LinearLayout>

    <!--登陆使用的组件-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15px"
                android:text="@string/wirte_user_name"
                android:textColor="@color/red"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_userName"
                android:layout_margin="5px" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_userPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15px"
                android:text="@string/wirte_user_pwd"
                android:textColor="@color/red"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_user_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_userPwd"
                android:layout_margin="5px"
                android:inputType="textPassword" />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20px"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>