<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <!--登陆后展示的界面-->
    <LinearLayout
        android:id="@+id/show_info"
        android:layout_width="match_parent"
        android:layout_height="400px"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="200px"
            android:layout_height="250px"
            android:layout_gravity="left"
            android:layout_margin="10px"
            android:src="@drawable/head" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginTop="5px"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/iv_user_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:src="@mipmap/man" />

            <ImageView
                android:id="@+id/iv_user_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:src="@mipmap/woman" />

        </LinearLayout>
    </LinearLayout>
    <!--登录注册按钮-->
    <Button
        android:id="@+id/btn_login_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btnsharp"
        android:text="@string/login_regist" />
    <!--横线-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#aa000000" />
    <!--两个功能按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_releaseInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/release_info" />

        <Button
            android:id="@+id/btn_scanRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/scan_record" />
    </LinearLayout>
    <!--展示数据-->
    <ListView
        android:id="@+id/lv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@color/silver" />

</LinearLayout>