<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <!--登陆后展示的界面-->
    <LinearLayout
        android:id="@+id/show_info"
        android:layout_width="match_parent"
        android:layout_height="400px"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="200px"
            android:layout_height="250px"
            android:layout_gravity="left"
            android:layout_margin="10px"
            android:src="@drawable/head" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginTop="5px"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/iv_user_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:src="@mipmap/man" />

            <ImageView
                android:id="@+id/iv_user_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:src="@mipmap/woman" />

        </LinearLayout>
    </LinearLayout>

    <!--住址-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:text="@string/user_address"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_user_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="2"
            android:text="@string/user_name"
            android:textSize="20dp" />


    </LinearLayout>
    <!--详细住址-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:text="@string/user_detail_address"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_user_detail_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="2"
            android:text="@string/user_name"
            android:textSize="20dp" />


    </LinearLayout>
    <!--联系方式-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:text="@string/user_contact"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_user_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="2"
            android:text="@string/user_name"
            android:textSize="20dp" />


    </LinearLayout>
    <!--常用邮箱-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="1"
            android:text="@string/user_email"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="5px"
            android:layout_weight="2"
            android:text="@string/user_name"
            android:textSize="20dp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/login_out"
        android:textColor="@color/red" />

</LinearLayout>