<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--顶部信息栏-->
    <LinearLayout
        android:id="@+id/useless"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20px"
            android:src="@drawable/backarrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20px"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="志愿者招聘"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="确认"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <!--填写部分-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--姓名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/editsharp"
                    android:hint="" />

            </LinearLayout>

            <!--年龄-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/user_age"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/et_user_age"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/editsharp"
                    android:hint=""
                    android:inputType="number" />

            </LinearLayout>

            <!--性别-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/user_gender"
                    android:textColor="@color/black" />


                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_man"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="男" />

                    <RadioButton
                        android:id="@+id/rb_woman"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="女" />

                </RadioGroup>


            </LinearLayout>

            <!--家庭住址-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/user_address"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/et_user_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/editsharp"
                    android:hint="" />

            </LinearLayout>

            <!--常用邮箱-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/user_email"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/et_user_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/editsharp"
                    android:hint=""
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <!--联系方式-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/user_contact"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/et_user_contact"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/editsharp"
                    android:hint="" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>